Fixz-indexes

--- a/react/Autosuggest/Autosuggest.less
+++ b/react/Autosuggest/Autosuggest.less
@@ -9,8 +9,11 @@
   width: 100%;
 }
 
+.containerOpen {
+  z-index: @z-index-page-overlay;
+}
+
 .suggestionsContainer {
-  z-index: @z-index-inline-overlay;
   display: none;
   position: absolute;
   background-color: @sk-white;
