--- a/theme/mixins/backdrop.less
+++ b/theme/mixins/backdrop.less
@@ -7,5 +7,5 @@
   background-color: @sk-black;
   opacity: 0.7;
   transition: opacity 0.3s;
-  z-index: @z-index-negative;
+  z-index: @z-index-inline-overlay;
 }
